WORK #11: Fix styles and revert responsive change Responsive already had css attempting to hide entry content on mobile However styles.css had css that was too specific for responsive to override. Here we make styles.css less specific so no net changes to responsive

--- a/catch-base-pro/css/responsive.css
+++ b/catch-base-pro/css/responsive.css
@@ -996,10 +996,6 @@ Responsive Style
 	#promotion-message .right {
 	    max-width: 25%;
 	}
-
-	#feature-slider .entry-container .entry-content {
-		display: none;
-	}
 }
 
 /*--------------------------------------------------------------
